After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 704741 - compilation warning
compilation warning
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: User Accounts
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Ondrej Holy
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-07-23 12:25 UTC by Ondrej Holy
Modified: 2013-07-24 08:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix compilation warnings (1.18 KB, patch)
2013-07-23 12:25 UTC, Ondrej Holy
needs-work Details | Review
fix compilation warnings and function name (2.63 KB, patch)
2013-07-24 07:21 UTC, Ondrej Holy
committed Details | Review

Description Ondrej Holy 2013-07-23 12:25:28 UTC
Created attachment 249888 [details] [review]
fix compilation warnings

pw-utils.c:166:1: warning: no previous prototype for ‘pw_strenght_hint_get_width_chars’ [-Wmissing-prototypes]
 pw_strenght_hint_get_width_chars 

I've attached patch to fix it...
Comment 1 Bastien Nocera 2013-07-23 12:48:47 UTC
Review of attachment 249888 [details] [review]:

::: panels/user-accounts/pw-utils.c
@@ +165,2 @@
 int
+pw_strenght_hint_get_width_chars (void)

strength as well, not strenght
Comment 2 Ondrej Holy 2013-07-24 07:21:12 UTC
Created attachment 250000 [details] [review]
fix compilation warnings and function name

(In reply to comment #1)
> Review of attachment 249888 [details] [review]:
> 
> ::: panels/user-accounts/pw-utils.c
> @@ +165,2 @@
>  int
> +pw_strenght_hint_get_width_chars (void)
> 
> strength as well, not strenght

ahhhh, that's why I'm unable to find this function several times probably :-D
Comment 3 Bastien Nocera 2013-07-24 08:02:11 UTC
Review of attachment 250000 [details] [review]:

Looks good.