user-accounts: fix compilation warning and function name

https://bugzilla.gnome.org/show_bug.cgi?id=704741